Fix: align logo in headerbar to vertical center

--- a/assets/css/responsive-header.css
+++ b/assets/css/responsive-header.css
@@ -18,6 +18,7 @@
 
 .headerbar__images {
     width: 20rem;
+    align-items: center;
 }
 
 .headerbar__nav ul {
